Start of templating (#133)
* start of templating for bambu based on the nozzle type


* updates


* updates


* updates


* start of templates


* start of parsing


* change trait to be a bit more generic

* updates


* updates


* add slicer config

* process


* updates


* updates


* updates


* updates


* updates


* slicy mc slice face

* punch hw configuration through

* build


* build


* updates


* updates


* updates


---------
