# openapi/api.json
@@ -72,13 +72,140 @@
                     ],
                     "description": "The current stage of the machine as defined by Bambu which can include errors, etc.",
                     "nullable": true
+                  },
+                  "nozzle_diameter": {
+                    "allOf": [
+                      {
+                        "$ref": "#/components/schemas/NozzleDiameter"
+                      }
+                    ],
+                    "description": "The nozzle diameter of the machine."
                   }
                 },
+                "required": [
+                  "nozzle_diameter"
+                ],
                 "type": "object"
               }
             },
             "required": [
               "Bambu"
+            ],
+            "type": "object"
+          }
+        ]
+      },
+      "FdmHardwareConfiguration": {
+        "description": "Configuration for a FDM-based printer.",
+        "properties": {
+          "filament_material": {
+            "allOf": [
+              {
+                "$ref": "#/components/schemas/FilamentMaterial"
+              }
+            ],
+            "description": "type of material being extruded"
+          },
+          "nozzle_diameter": {
+            "description": "Diameter of the extrusion nozzle, in mm.",
+            "format": "double",
+            "type": "number"
+          }
+        },
+        "required": [
+          "filament_material",
+          "nozzle_diameter"
+        ],
+        "type": "object"
+      },
+      "FilamentMaterial": {
+        "description": "The material that the filament is made of.",
+        "oneOf": [
+          {
+            "description": "polylactic acid based plastics",
+            "enum": [
+              "Pla"
+            ],
+            "type": "string"
+          },
+          {
+            "description": "acrylonitrile butadiene styrene based plastics",
+            "enum": [
+              "Abs"
+            ],
+            "type": "string"
+          },
+          {
+            "description": "polyethylene terephthalate glycol based plastics",
+            "enum": [
+              "Petg"
+            ],
+            "type": "string"
+          },
+          {
+            "description": "unsuprisingly, nylon based",
+            "enum": [
+              "Nylon"
+            ],
+            "type": "string"
+          },
+          {
+            "description": "thermoplastic polyurethane based urethane material",
+            "enum": [
+              "Tpu"
+            ],
+            "type": "string"
+          },
+          {
+            "description": "polyvinyl alcohol based material",
+            "enum": [
+              "Pva"
+            ],
+            "type": "string"
+          },
+          {
+            "description": "high impact polystyrene based material",
+            "enum": [
+              "Hips"
+            ],
+            "type": "string"
+          },
+          {
+            "description": "composite material with stuff in other stuff, something like PLA mixed with carbon fiber, kevlar, or fiberglass",
+            "enum": [
+              "Composite"
+            ],
+            "type": "string"
+          },
+          {
+            "description": "none of the above, buyer beware",
+            "enum": [
+              "Other"
+            ],
+            "type": "string"
+          }
+        ]
+      },
+      "HardwareConfiguration": {
+        "description": "The hardware configuration of a machine.",
+        "oneOf": [
+          {
+            "description": "No configuration is possible. This isn't the same conceptually as an `Option<HardwareConfiguration>`, because this indicates we positively know there is no possible configuration changes that are possible with this method of manufcture.",
+            "enum": [
+              "None"
+            ],
+            "type": "string"
+          },
+          {
+            "additionalProperties": false,
+            "description": "Hardware configuration specific to FDM based printers",
+            "properties": {
+              "Fdm": {
+                "$ref": "#/components/schemas/FdmHardwareConfiguration"
+              }
+            },
+            "required": [
+              "Fdm"
             ],
             "type": "object"
           }
@@ -95,6 +222,14 @@
             ],
             "description": "Additional, per-machine information which is specific to the underlying machine type.",
             "nullable": true
+          },
+          "hardware_configuration": {
+            "allOf": [
+              {
+                "$ref": "#/components/schemas/HardwareConfiguration"
+              }
+            ],
+            "description": "Information about how the Machine is currently configured."
           },
           "id": {
             "description": "Machine Identifier (ID) for the specific Machine.",
@@ -135,6 +270,7 @@
           }
         },
         "required": [
+          "hardware_configuration",
           "id",
           "machine_type",
           "make_model",
@@ -304,6 +440,39 @@
           }
         ]
       },
+      "NozzleDiameter": {
+        "description": "A nozzle diameter.",
+        "oneOf": [
+          {
+            "description": "0.2mm.",
+            "enum": [
+              "0.2"
+            ],
+            "type": "string"
+          },
+          {
+            "description": "0.4mm.",
+            "enum": [
+              "0.4"
+            ],
+            "type": "string"
+          },
+          {
+            "description": "0.6mm.",
+            "enum": [
+              "0.6"
+            ],
+            "type": "string"
+          },
+          {
+            "description": "0.8mm.",
+            "enum": [
+              "0.8"
+            ],
+            "type": "string"
+          }
+        ]
+      },
       "Pong": {
         "description": "The response from the `/ping` endpoint.",
         "properties": {
@@ -349,12 +518,25 @@
           "machine_id": {
             "description": "The machine id to print to.",
             "type": "string"
+          },
+          "slicer_configuration": {
+            "allOf": [
+              {
+                "$ref": "#/components/schemas/SlicerConfiguration"
+              }
+            ],
+            "description": "Requested design-specific slicer configurations.",
+            "nullable": true
           }
         },
         "required": [
           "job_name",
           "machine_id"
         ],
+        "type": "object"
+      },
+      "SlicerConfiguration": {
+        "description": "The slicer configuration is a set of parameters that are passed to the slicer to control how the gcode is generated.",
         "type": "object"
       },
       "Stage": {
